--- a/package.json
+++ b/package.json
@@ -1,34 +1,46 @@
 {
-        "name": "zagy-blog",
-        "version": "1.0.0",
-        "type": "module",
-        "description": "",
-        "main": "dist/index.js",
-        "scripts": {
-                "start": "node  ./dist/index.js",
-                "build": "tsc --watch --preserveWatchOutput",
-                "dev": "nodemon  dist/index ",
-                "ts": "ts-node-esm src/index.ts",
-                "test": "cross-env NODE_OPTIONS=--experimental-vm-modules npx jest",
-                "prettier": "prettier --config .prettierrc \"src/**/*.ts\" --write",
-                "lint": "eslint . --ext .ts"
-        },
-        "keywords": [],
-        "author": "",
-        "license": "ISC",
-        "devDependencies": {
-                "@types/jest": "^29.2.1",
-                "@types/node": "^18.11.9",
-                "@typescript-eslint/eslint-plugin": "^5.42.0",
-                "@typescript-eslint/parser": "^5.42.0",
-                "cross-env": "^7.0.3",
-                "eslint": "^8.26.0",
-                "eslint-config-prettier": "^8.5.0",
-                "eslint-plugin-prettier": "^4.2.1",
-                "jest": "^29.2.2",
-                "nodemon": "^2.0.20",
-                "prettier": "^2.7.1",
-                "ts-node": "^10.9.1",
-                "typescript": "^4.8.4"
-        }
+  "name": "zagy-blog",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "build": "next build",
+    "dev": "next dev",
+    "postinstall": "prisma generate",
+    "lint": "next lint",
+    "start": "next start"
+  },
+  "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.4",
+    "@prisma/client": "^4.5.0",
+    "@tanstack/react-query": "^4.10.0",
+    "@trpc/client": "10.0.0-rc.0",
+    "@trpc/next": "10.0.0-rc.0",
+    "@trpc/react-query": "10.0.0-rc.0",
+    "@trpc/server": "10.0.0-rc.0",
+    "next": "13.0.1",
+    "next-auth": "^4.15.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "superjson": "1.9.1",
+    "zod": "^3.18.0"
+  },
+  "devDependencies": {
+    "@types/node": "18.0.0",
+    "@types/react": "18.0.14",
+    "@types/react-dom": "18.0.5",
+    "@typescript-eslint/eslint-plugin": "^5.33.0",
+    "@typescript-eslint/parser": "^5.33.0",
+    "autoprefixer": "^10.4.7",
+    "eslint": "8.22.0",
+    "eslint-config-next": "13.0.1",
+    "postcss": "^8.4.14",
+    "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.13",
+    "prisma": "^4.5.0",
+    "tailwindcss": "^3.2.0",
+    "typescript": "^4.8.4"
+  },
+  "ct3aMetadata": {
+    "initVersion": "6.7.0"
+  }
 }
