--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,31 +1,21 @@
 {
-        "compilerOptions": {
-            "target": "es2021",
-            "module": "ES2022",
-            "lib": [
-                "dom",
-                "es2021"
-            ],
-            "sourceMap": false,
-            "outDir": "dist",
-            "rootDir": "src",
-            "strict": true,
-            "types": [
-                "node",
-                "jest"
-            ],
-            "esModuleInterop": true,
-            "moduleResolution": "node",
-            "resolveJsonModule": true,
-            "baseUrl": ".",
-            "allowSyntheticDefaultImports": true,
-            "noUnusedLocals": true,
-            "noUnusedParameters": true,
-            "noImplicitReturns": true,
-            "noFallthroughCasesInSwitch": true,
-            "removeComments": true,
-            "allowJs": true
-        },
-        "include":["src"],
-        "exclude":["node_modules"]
-    }
+  "compilerOptions": {
+    "target": "es2017",
+    "lib": ["dom", "dom.iterable", "esnext"],
+    "allowJs": true,
+    "skipLibCheck": true,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "noEmit": true,
+    "esModuleInterop": true,
+    "module": "esnext",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "jsx": "preserve",
+    "incremental": true,
+    "noUncheckedIndexedAccess": true
+  },
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "**/*.cjs", "**/*.mjs"],
+  "exclude": ["node_modules"]
+}
