--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
     "dev": "next dev",
     "postinstall": "prisma generate",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "db:studio": "npx prisma studio",
+    "db:migrate": "npx prisma migrate dev --name",
+    "db:seed": "npx prisma db seed"
+  },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.4",
@@ -25,6 +31,7 @@
     "zod": "^3.18.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
@@ -38,6 +45,7 @@
     "prettier-plugin-tailwindcss": "^0.1.13",
     "prisma": "^4.5.0",
     "tailwindcss": "^3.2.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   },
   "ct3aMetadata": {
