--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@trpc/next": "10.0.0-rc.0",
     "@trpc/react-query": "10.0.0-rc.0",
     "@trpc/server": "10.0.0-rc.0",
+    "clsx": "^1.2.1",
     "next": "13.0.1",
     "next-auth": "^4.15.0",
     "react": "18.2.0",
