--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.13",
     "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.5.0",
     "@tanstack/react-query": "^4.10.0",
@@ -26,9 +27,11 @@
     "clsx": "^1.2.1",
     "next": "13.0.1",
     "next-auth": "^4.15.0",
+    "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "1.9.1",
+    "use-local-storage-state": "^18.1.1",
     "zod": "^3.18.0"
   },
   "devDependencies": {
