--- a/.github/workflows/buildWorkflow.yml
+++ b/.github/workflows/buildWorkflow.yml
@@ -1,10 +1,17 @@
 name: workFlow
-run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
+run-name: ${{ github.actor }} is pushing
 on:
   push:
     branches: [ test ]
   pull_request:
     branches: [ main ]
+env:
+  DATABASE_URL: ${{secrets.DATABASE_URL}}
+  NEXTAUTH_SECRET: ${{secrets.NEXTAUTH_SECRET}}
+  NEXTAUTH_URL: ${{secrets.NEXTAUTH_URL}}
+  DISCORD_CLIENT_ID: ${{secrets.DISCORD_CLIENT_ID}}
+  DISCORD_CLIENT_SECRET: ${{secrets.DISCORD_CLIENT_SECRET}}
+
 jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
