--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,5 +9,9 @@
     "extends": [
         "next/core-web-vitals",
         "plugin:@typescript-eslint/recommended"
-    ]
+    ],
+    "rules": {
+        "no-var": "error",
+        "prefer-const": "error"
+    }
 }
