--- a/.github/workflows/buildWorkflow.yml
+++ b/.github/workflows/buildWorkflow.yml
@@ -2,7 +2,7 @@ name: workFlow
 run-name: ${{ github.actor }} is pushing
 on:
   push:
-    branches: [ test ]
+    branches: [ test, main ]
   pull_request:
     branches: [ main ]
 env:
