--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "clsx": "^1.2.1",
     "next": "13.0.1",
     "next-auth": "^4.15.0",
+    "next-seo": "^5.14.1",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
