--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "dependencies": {
     "@heroicons/react": "^2.0.13",
     "@next-auth/prisma-adapter": "^1.0.4",
+    "@octokit/plugin-throttling": "^4.3.2",
+    "@octokit/rest": "^19.0.5",
     "@prisma/client": "^4.5.0",
     "@tanstack/react-query": "^4.10.0",
     "@trpc/client": "10.0.0-rc.0",
@@ -25,6 +27,8 @@
     "@trpc/react-query": "10.0.0-rc.0",
     "@trpc/server": "10.0.0-rc.0",
     "clsx": "^1.2.1",
+    "esbuild": "^0.15.15",
+    "mdx-bundler": "^9.0.1",
     "next": "13.0.1",
     "next-auth": "^4.15.0",
     "next-seo": "^5.14.1",
