--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.13",
+    "@jsdevtools/rehype-toc": "^3.0.2",
     "@next-auth/prisma-adapter": "^1.0.4",
     "@octokit/plugin-throttling": "^4.3.2",
     "@octokit/rest": "^19.0.5",
@@ -36,12 +37,17 @@
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "rehype-prism-plus": "^1.5.0",
+    "rehype-slug": "^5.1.0",
+    "remark-gfm": "^3.0.1",
     "superjson": "1.9.1",
+    "unified": "^10.1.2",
     "use-local-storage-state": "^18.1.1",
     "zod": "^3.18.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
+    "@tailwindcss/typography": "^0.5.8",
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
