--- a/.github/workflows/buildWorkflow.yml
+++ b/.github/workflows/buildWorkflow.yml
@@ -11,6 +11,7 @@ env:
   NEXTAUTH_URL: ${{secrets.NEXTAUTH_URL}}
   DISCORD_CLIENT_ID: ${{secrets.DISCORD_CLIENT_ID}}
   DISCORD_CLIENT_SECRET: ${{secrets.DISCORD_CLIENT_SECRET}}
+  BOT_GITHUB_TOKEN: ${{secrets.BOT_GITHUB_TOKEN}}
 
 jobs:
   linter:
