--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "remark-gfm": "^3.0.1",
     "superjson": "1.9.1",
     "unified": "^10.1.2",
+    "use-debounce": "^9.0.2",
     "use-local-storage-state": "^18.1.1",
     "zod": "^3.18.0"
   },
