--- a/.github/workflows/revalidate.yml
+++ b/.github/workflows/revalidate.yml
@@ -34,5 +34,5 @@ jobs:
         with:
           url: "https://www.zagy.tech/api/revalidate"
           method: "POST"
-          customHeaders: '{"Content-Type": "application/json","Authorization":${{secrets.SEED_PASS}}}'
+          customHeaders: '{"Content-Type": "application/json","Authorization":"${{secrets.SEED_PASS}}"}'
           data: '{"added":"${{steps.files.outputs.added_files}}", "deleted": "${{steps.files.outputs.deleted_files}}", "modified": "${{steps.files.outputs.modified_files}}", "renamed": "${{steps.files.outputs.renamed_files}}"}'
