--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "build": "pnpm with-env next build",
-    "start": "next start",
+    "start": "pnpm with-env next start",
     "clean": "rm -rf .next .turbo node_modules",
     "dev": "pnpm with-env next dev",
     "lint": "SKIP_ENV_VALIDATION=1 next lint",
