--- a/packages/utils/tsconfig.json
+++ b/packages/utils/tsconfig.json
@@ -1,4 +1,35 @@
 {
   "extends": "../../tsconfig.json",
-  "include": ["src", "index.ts"]
+  "compilerOptions": {
+    "target": "es2021",
+    "module": "ES2022",
+    "lib": [
+      "dom",
+      "es2021"
+    ],
+    "sourceMap": false,
+    "outDir": "dist",
+    "rootDir": ".",
+    "strict": true,
+    "types": [
+      "node",
+    ],
+    "noEmit": false,
+    "esModuleInterop": true,
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "baseUrl": ".",
+    "allowSyntheticDefaultImports": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+    "noImplicitReturns": false,
+    "noFallthroughCasesInSwitch": true,
+    "removeComments": true,
+    "allowJs": true,
+    "declaration": true
+  },
+  "include": [
+    "src",
+    "index.ts"
+  ]
 }
