--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "type-check": "turbo type-check"
   },
   "dependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "^3.7.1",
     "@manypkg/cli": "^0.20.0",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
@@ -22,7 +23,7 @@
     "eslint-config-prettier": "^8.6.0",
     "prettier": "^2.8.3",
     "prettier-plugin-tailwindcss": "^0.2.2",
-    "@ianvs/prettier-plugin-sort-imports": "^3.7.1",
+    "tsup": "^6.5.0",
     "turbo": "^1.7.0",
     "typescript": "^4.9.4"
   },
