--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,12 +1,15 @@
 {
   "name": "@acme/api",
   "version": "0.1.0",
-  "main": "./index.ts",
-  "types": "./index.ts",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "license": "MIT",
+  "type": "module",
+
   "scripts": {
     "clean": "rm -rf .turbo node_modules",
     "lint": "eslint",
+    "build":"tsup index.ts --format esm --dts",
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
