--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -1,14 +1,16 @@
 {
   "name": "@acme/db",
   "version": "0.1.0",
-  "main": "./index.ts",
-  "types": "./index.ts",
+  "type": "module",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "license": "MIT",
   "scripts": {
     "clean": "rm -rf .turbo node_modules",
     "db:generate": "pnpm with-env prisma generate",
     "db:push": "pnpm with-env prisma db push --skip-generate",
     "dev": "pnpm with-env prisma studio --port 5556",
+    "build":"tsup index.ts --format esm --dts",
     "with-env": "dotenv -e ../../.env --"
   },
   "dependencies": {
