--- a/packages/mdx/package.json
+++ b/packages/mdx/package.json
@@ -1,13 +1,16 @@
 {
     "name": "@acme/mdx",
     "version": "0.1.0",
-    "main": "./index.ts",
-    "types": "./index.ts",
+    "main": "./dist/index.js",
+    "types": "./dist/index.d.ts",
     "license": "MIT",
+    "type": "module",
+
     "scripts": {
         "clean": "rm -rf .turbo node_modules",
         "lint": "eslint",
-        "type-check": "tsc --noEmit"
+        "build":"tsup index.ts --format esm --dts",
+                "type-check": "tsc --noEmit"
     },
     "dependencies": {
         "@acme/db": "*",
