--- a/apps/express/package.json
+++ b/apps/express/package.json
@@ -12,7 +12,7 @@
     "start:prod": "tsc && node ./dist/index.js",
     "start": "pnpm with-env node ./dist/index.js",
     "serve": "node dist/index.js",
-    "build":"tsup src/index.ts --format esm --dts",
+    "build": "tsup src/index.ts --format esm --dts",
     "clean": "rm -rf dist .turbo node_modules",
     "dev": "ts-node ./src/index.ts --format cjs --watch --onSuccess \"node dist/index.js\"",
     "type-check": "tsc --noEmit",
@@ -24,6 +24,7 @@
     "@acme/db": "*",
     "@acme/mdx": "*",
     "@acme/utils": "*",
+    "axios": "^1.3.0",
     "express": "^4.18.2",
     "nodemon": "^2.0.20"
   },
