--- a/packages/constants/package.json
+++ b/packages/constants/package.json
@@ -7,11 +7,12 @@
   "type": "module",
   "scripts": {
     "clean": "rm -rf .turbo node_modules",
-    "lint": "eslint",   
-    "build":"tsup index.ts --format esm --dts",
+    "lint": "eslint",
+    "build": "tsup index.ts --format esm --dts",
     "type-check": "tsc --noEmit"
   },
   "devDependencies": {
+    "@types/node": "^18.0.0",
     "eslint": "^8.32.0",
     "typescript": "^4.9.4"
   }
