--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -9,6 +9,7 @@
     "clean": "rm -rf .turbo node_modules",
     "db:generate": "pnpm with-env prisma generate",
     "db:push": "pnpm with-env prisma db push --skip-generate",
+    "db:studio": "pnpm with-env prisma studio",
     "dev": "pnpm with-env prisma studio --port 5556",
     "build":"tsup index.ts --format esm --dts",
     "with-env": "dotenv -e ../../.env --"
