--- a/.github/workflows/monorepo-last-last_zagy-api-re.yml
+++ b/.github/workflows/monorepo-last-last_zagy-api-re.yml
@@ -20,12 +20,16 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: '18.x'
-
-      - name: npm install, build, and test
+      - name: Setup pnpm
+        # You may pin to the exact commit or the version.
+        # uses: pnpm/action-setup@c3b53f6a16e57305370b4ae5a540c2077a1d50dd
+        uses: pnpm/action-setup@v2.2.4
+      - name: is pnpm installed
+        run: pnpm --version
+      - name: pnpm install, build
         run: |
-          npm install
-          npm run build --if-present
-          npm run test --if-present
+          pnpm install 
+          pnpm build --filter express --if-present
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
