--- a/apps/express/package.json
+++ b/apps/express/package.json
@@ -19,11 +19,10 @@
     "with-env": "dotenv -e ../../.env --"
   },
   "dependencies": {
-    "@acme/api": "*",
-    "@acme/constants": "*",
-    "@acme/db": "*",
-    "@acme/mdx": "*",
-    "@acme/utils": "*",
+    "@acme/constants": "workspace:*",
+    "@acme/db": "workspace:*",
+    "@acme/mdx": "workspace:*",
+    "@acme/utils": "workspace:*",
     "axios": "^1.3.0",
     "express": "^4.18.2",
     "nodemon": "^2.0.20"
