--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -12,10 +12,10 @@
     "with-env": "dotenv -e ../../.env --"
   },
   "dependencies": {
-    "@acme/db": "*",
     "@acme/api": "*",
     "@acme/auth": "*",
     "@acme/constants": "*",
+    "@acme/db": "*",
     "@acme/tailwind-config": "*",
     "@acme/utils": "*",
     "@heroicons/react": "^2.0.14",
@@ -29,6 +29,7 @@
     "next-auth": "^4.19.0",
     "next-seo": "^5.15.0",
     "next-themes": "^0.2.1",
+    "nprogress": "^0.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "use-debounce": "^9.0.3",
@@ -37,6 +38,7 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.8",
     "@types/node": "^18.0.0",
+    "@types/nprogress": "^0.2.0",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
     "autoprefixer": "^10.4.13",
