--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -31,6 +31,7 @@
     "next-themes": "^0.2.1",
     "nprogress": "^0.2.0",
     "react": "18.2.0",
+    "react-content-loader": "^6.2.0",
     "react-dom": "18.2.0",
     "use-debounce": "^9.0.3",
     "zod": "^3.20.2"
