--- a/packages/mdx/package.json
+++ b/packages/mdx/package.json
@@ -5,17 +5,17 @@
     "types": "./dist/index.d.ts",
     "license": "MIT",
     "type": "module",
-
     "scripts": {
         "clean": "rm -rf .turbo node_modules",
         "lint": "eslint",
-        "build":"tsup index.ts --format esm --dts",
-                "type-check": "tsc --noEmit"
+        "build": "tsup index.ts --format esm --dts",
+        "type-check": "tsc --noEmit"
     },
     "dependencies": {
         "@acme/db": "*",
         "@acme/utils": "*",
         "@jsdevtools/rehype-toc": "^3.0.2",
+        "better-remark-embedder": "^0.0.3",
         "esbuild": "^0.17.5",
         "mdx-bundler": "^9.2.1",
         "reading-time": "^1.5.0",
