--- a/apps/express/package.json
+++ b/apps/express/package.json
@@ -11,10 +11,11 @@
   "scripts": {
     "start:prod": "tsc && node ./dist/index.js",
     "start": "pnpm with-env node ./dist/index.js",
+    "test": "jest",
     "serve": "node dist/index.js",
     "build": "tsup src/index.ts --format esm --dts",
     "clean": "rm -rf dist .turbo node_modules",
-    "dev": "ts-node ./src/index.ts --format cjs --watch --onSuccess \"node dist/index.js\"",
+    "dev": "tsup src/index.ts --format esm --dts --watch --onSuccess \"pnpm start\"",
     "type-check": "tsc --noEmit",
     "with-env": "dotenv -e ../../.env --"
   },
@@ -29,8 +30,11 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.16",
+    "@types/jest": "^29.4.0",
     "@types/node": "^18.0.0",
     "eslint": "^8.32.0",
+    "jest": "^29.4.3",
+    "ts-jest": "^29.0.5",
     "tsup": "^6.5.0",
     "typescript": "^4.9.4"
   }
