--- a/turbo.json
+++ b/turbo.json
@@ -31,6 +31,9 @@
     "type-check": {
       "dependsOn": ["^db:generate"],
       "cache": false
+    },
+    "test": {
+      "dependsOn": ["^build"]
     }
   },
   "globalEnv": [
