--- a/apps/express/package.json
+++ b/apps/express/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "start:prod": "tsc && node ./dist/index.js",
     "start": "pnpm with-env node ./dist/index.js",
-    "test": "jest",
+    "test": "NODE_OPTIONS=--experimental-vm-modules npx jest",
     "serve": "node dist/index.js",
     "build": "tsup src/index.ts --format esm --dts",
     "clean": "rm -rf dist .turbo node_modules",
@@ -35,6 +35,7 @@
     "eslint": "^8.32.0",
     "jest": "^29.4.3",
     "ts-jest": "^29.0.5",
+    "ts-node": "^10.9.1",
     "tsup": "^6.5.0",
     "typescript": "^4.9.4"
   }
