chore: dev script run build in watch mode for deps

--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "start:nextjs:prod": "cd ./apps/nextjs && pnpm next start",
     "start:express": "pnpm --filter=express start",
     "start:express:prod": "node ./apps/express/dist/index.js",
-    "dev:nextjs": "turbo run dev --filter=nextjs",
-    "dev:express": "turbo run dev --filter=express",
+    "dev:nextjs": "turbo run dev --filter=nextjs...",
+    "dev:express": "turbo run dev --filter=express...",
     "test:express": "turbo run test --filter=express",
     "install:nextjs": "pnpm  --filter !express install --store=node_modules/.pnpm-store",
     "install:express": "pnpm run pre-install && pnpm --filter=express... install --store=node_modules/.pnpm-store",
