--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -10,8 +10,8 @@
     "db:generate": "pnpm with-env prisma generate",
     "db:push": "pnpm with-env prisma db push --skip-generate",
     "db:studio": "pnpm with-env prisma studio",
-    "dev": "pnpm with-env prisma studio --port 5556",
     "build":"tsup index.ts --format esm --dts",
+    "dev": "echo \"WATCHING DB\" && pnpm build --watch",
     "with-env": "dotenv -e ../../.env --"
   },
   "dependencies": {
