--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -5,11 +5,11 @@
     "types": "./dist/index.d.ts",
     "license": "MIT",
     "type": "module",
-
     "scripts": {
         "clean": "rm -rf .turbo node_modules",
         "lint": "eslint",
-        "build":"tsup index.ts --format esm --dts",
+        "build": "tsup index.ts --format esm --dts",
+        "dev": "echo \"WATCHING UTILS\" && pnpm build --watch",
         "type-check": "tsc --noEmit"
     },
     "dependencies": {
